[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
noto-sans-mono-bitmap = { version = "0.2.0", features = ["size_32"] }
pic8259 = "0.10.4"
spin = "0.9.8"
x86_64 = "0.14.11"
